# ros2-moveit-pybullet-bridge

./: .dockerignore  .gitignore  LICENSE  README.md  docker-compose.yml  requirements.txt  setup.sh
.ros-log/: latest
bridge_monitor_msgs/: CMakeLists.txt  package.xml
bridge_monitor_msgs/action/: ExecuteScenario.action  Pick.action  Place.action
bridge_monitor_msgs/msg/: DistributionMetrics.msg  DomainRandomizationConfig.msg  ExperimentMetadata.msg  RiskAttribution.msg  RiskStatus.msg  SimRealError.msg
bridge_monitor_msgs/srv/: AcknowledgeRisk.srv  ExportExperiment.srv  InjectShift.srv  SetRandomization.srv
dist_monitor/: package.xml  setup.cfg  setup.py
docker/: Dockerfile  README.md  entrypoint.sh
docs/: ACCEPTANCE_GAP.md  ARCHITECTURE.md  EXPERIMENTS.md  FMEA.md  ICD.md  INTEGRATION.md  MILESTONE_VERIFICATION_FIXES.md  PORTFOLIO_REMAINING.md  PROJECT_LEARNING_GUIDE.md  README.md  SETUP.md
hoc_console/: package.xml  setup.cfg  setup.py
manipulation_actions/: package.xml  setup.cfg  setup.py
moveit_config/: CMakeLists.txt  package.xml
moveit_config/config/: iiwa_joint_limits.yaml  iiwa_kinematics.yaml  iiwa_moveit_controllers.yaml  iiwa_ompl_planning.yaml  iiwa_pybullet.rviz  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  ompl_planning.yaml  ur5_pybullet.rviz
moveit_config/launch/: m2_demo.launch.py  m2_iiwa_demo.launch.py  move_group.launch.py
moveit_config/srdf/: kuka_iiwa.srdf  planar_2dof.srdf
moveit_config/urdf/: planar_2dof.urdf
pybullet_bridge/: package.xml  setup.cfg  setup.py
risk_engine/: package.xml  setup.cfg  setup.py
scripts/: benchmark_system.py  calibrate_monitor_thresholds.py  capture_dual_source_trajectory.py  capture_m2_rviz_recording.sh  capture_pick_lift_asset.py  capture_readme_assets.py  capture_readme_assets.sh  capture_sim_trajectory.py  check_bridge_comm.py  check_hoc_console.py  check_iiwa_joint_consistency.py  check_maintainability_nfr.py  check_monitor_metrics.py  check_moveit_closure.py  check_performance_nfr.py  check_policy_runner_benchmark.py  check_recording_ready.sh  check_reliability_nfr.py  check_risk_management.py  check_safety_nfr.py  generate_dual_repo_experiment_report.py  generate_dynamic_portfolio_demo_video.py  generate_integration_report.py  generate_milestone_assets.py  generate_same_task_calibration_report.py  (+35 more)
(+238 files in other folders)
