<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>moveit_config</name>
  <version>0.1.0</version>
  <description>MoveIt2 configuration for planar 2-DOF arm (scaffold).</description>
  <maintainer email="dev@example.com">ina</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>moveit_planners_ompl</exec_depend>
  <exec_depend>moveit_configs_utils</exec_depend>
  <exec_depend>launch_param_builder</exec_depend>
  <exec_depend>moveit_kinematics</exec_depend>
  <exec_depend>moveit_ros_visualization</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>rviz_common</exec_depend>
  <exec_depend>moveit_ros_move_group</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>pybullet_bridge</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
